<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_blue"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/background_blue"
        app:contentInsetStartWithNavigation="0dp"
        app:navigationIcon="@drawable/ic_back"
        app:title="@string/add_product" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_standard"
            android:layout_marginTop="@dimen/margin_standard"
            android:layout_marginBottom="@dimen/margin_large"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/categoryMenu"
                style="@style/TextInputLayoutDropDown"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_big"
                android:layout_margin="@dimen/margin_middle"
                android:textColorHint="@color/white"
                app:hintEnabled="false">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/selectCategories"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/dark_blue"
                    android:drawableTint="@color/white"
                    android:hint="@string/select_category"
                    android:inputType="none"
                    android:padding="@dimen/margin_middle_standard"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilProductName"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_big"
                android:layout_margin="@dimen/margin_middle"
                android:textColorHint="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etProductName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/dark_blue"
                    android:drawableTint="@color/white"
                    android:hint="@string/product_name"
                    android:inputType="text"
                    android:padding="@dimen/margin_middle_standard"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPrice"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_middle"
                android:layout_weight="1"
                app:counterMaxLength="5"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPrice"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/price"
                    android:inputType="number"
                    android:maxLength="17"
                    android:maxLines="1"
                    android:padding="@dimen/margin_middle_standard"
                    android:textColor="@color/white" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilDescription"
                style="@style/DescriptionInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_middle"
                app:endIconMode="clear_text"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top|center_vertical|center_horizontal|center|start"
                    android:hint="@string/product_code"
                    android:inputType="textMultiLine"
                    android:minLines="1"
                    android:padding="@dimen/margin_middle_standard"
                    android:scrollbars="none"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAddProduct"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_standard"
                android:layout_marginBottom="@dimen/margin_standard"
                android:backgroundTint="@color/black"
                android:text="Add"
                android:textAllCaps="false"
                android:textSize="18sp"
                app:cornerRadius="@dimen/margin_middle" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>